--- a/maven/jdk8/Dockerfile.nanoserver
+++ b/maven/jdk8/Dockerfile.nanoserver
@@ -1,2 +1,17 @@
-# Use https://github.com/jenkinsci/jnlp-agents as base for now
-FROM jenkins/jnlp-agent-maven:windows-nanoserver AS jnlp
+FROM mcr.microsoft.com/windows/servercore:1809 as core
+FROM csanchez/maven:3-openjdk-8-nanoserver-1809 as maven
+
+FROM jenkins/inbound-agent:jdk8-nanoserver-1809
+
+COPY --from=maven C:/ProgramData/Maven C:/ProgramData/Maven
+
+# https://github.com/StefanScherer/dockerfiles-windows/tree/master/golang-issue-21867
+COPY --from=core C:/windows/system32/netapi32.dll C:/windows/system32/netapi32.dll
+
+ENV JAVA_HOME ${JAVA_HOME}
+ENV MAVEN_HOME C:\ProgramData\Maven
+
+# Windows docker doesn't work well with paths, so we have to expose this using ENV
+ENV PATH "${PATH};${MAVEN_HOME}\bin"
+
+ENTRYPOINT ["pwsh.exe", "-f", "C:/ProgramData/Jenkins/jenkins-agent.ps1"]
