--- a/common-cst-windows.yml
+++ b/common-cst-windows.yml
@@ -6,17 +6,17 @@ metadataTest:
 fileExistenceTests:
 
   - name: 'Jenkins agent'
-    path: 'C:\ProgramData\Jenkins\jenkins-agent.ps1'
+    path: 'C:/ProgramData/Jenkins/jenkins-agent.ps1'
     shouldExist: true
     isExecutableBy: 'any'
   - name: 'Jenkins agent jar file'
-    path: 'C:\ProgramData\Jenkins\agent.jar'
+    path: 'C:/ProgramData/Jenkins/agent.jar'
     shouldExist: true
   - name: "Default user's home"
-    path: 'C:\Jenkins'
+    path: 'C:/Jenkins/'
     shouldExist: true
   - name: 'cmd'
-    path: 'C:\Windows\System32\cmd.exe'
+    path: 'C:/Windows/System32/cmd.exe'
     shouldExist: true
     isExecutableBy: 'any'
   - name: 'Git'
