--- a/maven/jdk17/Dockerfile.nanoserver
+++ b/maven/jdk17/Dockerfile.nanoserver
@@ -9,7 +9,6 @@ ARG LAUNCHABLE_VERSION=1.63.0
 # hadolint ignore=SC3057,DL3013
 RUN "C:/Python/python.exe" -m pip install --no-cache-dir --upgrade pip; `
   pip install --no-cache-dir setuptools wheel; `
-  dir env:LAUNCHABLE_VERSION; `
   pip install --no-cache-dir launchable=="${env:LAUNCHABLE_VERSION}";
 
 FROM eclipse-temurin:${JAVA_VERSION}-jdk-windowsservercore-1809 AS core
@@ -35,6 +34,7 @@ RUN Invoke-WebRequest -Uri "https://archive.apache.org/dist/maven/maven-3/${env:
   Expand-Archive -Path "${env:TEMP}/apache-maven.zip -Destination" C:/tools ; `
   Remove-Item ${env:TEMP}/apache-maven.zip ;
 
+ENV PYTHON_PATH "C:/tools/python/;C:/tools/python/Scripts/"
 ENV MAVEN_HOME "C:/tools/apache-maven-${MAVEN_VERSION}"
 ENV PYTHON_PATH "C:/tools/python/;C:/tools/python/Scripts/"
 ENV PATH="${PYTHON_PATH};${JAVA_HOME}/bin;${PATH};${MAVEN_HOME}/bin;"
