--- a/updatecli/updatecli.d/weekly.d/jdk21.yml
+++ b/updatecli/updatecli.d/weekly.d/jdk21.yml
@@ -1,5 +1,5 @@
 ---
-name: Bump JDK11 version
+name: Bump JDK21 version
 
 scms:
   default:
@@ -16,23 +16,24 @@ scms:
 sources:
   lastReleaseVersion:
     kind: githubrelease
-    name: Get the latest Adoptium JDK11 version
+    name: Get the latest Adoptium JDK21 version
     spec:
       owner: "adoptium"
-      repository: "temurin11-binaries"
+      repository: "temurin21-binaries"
       token: "{{ requiredEnv .github.token }}"
       username: "{{ .github.username }}"
       versionfilter:
         kind: regex
-        # jdk-11.0.12+7(https://github.com/adoptium/temurin11-binaries/releases/tag/jdk-11.0.12%2B7) is OK
-        pattern: "^jdk-11.(\\d*).(\\d*).(\\d*)+(\\d*)$"
+        # jdk-21.0.2+8(https://github.com/adoptium/temurin21-binaries/releases/tag/jdk-21.0.2%2B8) is OK
+        # jdk-21.0.4.1+1(https://github.com/adoptium/temurin21-binaries/releases/tag/jdk-21.0.4.1%2B1) is OK
+        pattern: "^jdk-21.(\\d*).(\\d*).(\\d*)(.(\\d*))+(\\d*)$"
 
 targets:
-  updateJDK11Version:
-    name: Update the JDK11 version in JDK11 Maven Nanoserver image
+  updateJDK21Version:
+    name: Update the JDK21 version in the JDK21 Maven Nanoserver image
     kind: dockerfile
     spec:
-      file: maven/jdk11/Dockerfile.nanoserver
+      file: maven/jdk21/Dockerfile.nanoserver
       instruction:
         keyword: "ARG"
         matcher: "JAVA_VERSION"
@@ -41,9 +42,9 @@ targets:
 actions:
   default:
     kind: github/pullrequest
-    title: Bump JDK11 version to {{ source "lastReleaseVersion" }}
+    title: Bump JDK21 version to {{ source "lastReleaseVersion" }}
     scmid: default
     spec:
       labels:
         - enhancement
-        - jdk11
+        - jdk21
